- add recovery of existing automounts at startup.
- add configure option to enable exit leaving busy mounts mounted.
- sort out code for multiple maps per mount point.
- fix side effects on multi-mounts and submounts from above.
- test and fix basic map reread functions.
- remove need to read entire map when browsing is disabled.
- fix lookup context not being released.

11/4/2005 autofs-4.1.4
----------------------
- add /proc/modules check to Debian init script.
- fix typo in Gentoo init script reload function.
- fix default map type selection for submounts.
  - a side affect of this patch is that when the first mount
    point of a multi-mount entry is '/' it is no longer
    mandatory. This matches the Solaris automount parsing.
- implement a timeout for LDAP communication (Dan Cox).
- change setpgrp to setsid to disascociate from tty properly.
- fix auto.net and auto.smb to not use non-bourne shell regex
   when searching for their export list programs.
- fix nsswitch.conf sources detection.
- fix grep failing causing assignments to terminate init script.
- fix handling of localoptions options init script variable.
- sanitize records from auto.master file (Debian bug#298649).
- alter logic of UNDERSCORETODOT to work when it's not set (Debian bug#301358).
- attempt to fix Debian upgrade fail bug#300703.
  - changes from Herbert Xus' patch.
  - he`s not sure he got all cases and I can't see more either, so we'll see.
- revert some broken changes in Gentoo init script.
- fix end of string handling at end of parsing options string.
- more work on replicated server code - fix occasional mount fail.
- revert some Debian init script changes in favour of Debian maintainer patches.
  - and fix the fix.
- update kernel patches.
- remove isprint calls as it breaks 8-bit characters.

14/2/2005 autofs-4.1.4_beta2
----------------------------
- add update to -D variable propogation patch (Michael Blanddford).
- fix rentrancy problem when releasing the cache.