@@ -81,6 +81,7 @@
 - test and fix basic map reread functions.
 - remove need to read entire map when browsing is disabled.
 - fix lookup context not being released.
+- test and fix map re-read for master map entries with multiple entries.
 
 11/4/2005 autofs-4.1.4
 ----------------------
